# Rusty-KAN

./: README.md
.github/workflows/: rust.yml
rusty_kan/: Cargo.toml
rusty_kan/src/: kan.rs  lib.rs
rusty_kan/src/data_structures/: edge.rs  layer.rs  matrix.rs  mod.rs  node.rs  spline.rs  vector.rs
rusty_kan/src/tests/: edge_tests.rs  kan_tests.rs  layer_tests.rs  matrix_tests.rs  mod.rs  node_tests.rs  spline_tests.rs  vector_tests.rs
