[package]
name = "rusty_kan"
version = "0.1.0"
edition = "2021"
description = "An implementation of Kolmogorov-Arnold Networks in Rust"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rand = "0.8.5"