[package]
name = "rusty_kan"
version = "0.1.1"
edition = "2021"
description = "An implementation of Kolmogorov-Arnold Networks in Rust"
license = "MIT"
keywords = ["rust", "machine_learning", "deep_learning", "data_science"]
categories = ["science"]
authors = ["LordSaumya"]
repository = "https://github.com/LordSaumya/DeepIron"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rand = "0.8.5"